force-app/main/default/objects/Sales_Team_Talent_review__c/Sales_Team_Talent_review__c.object-meta.xml
<CustomObject>
    <description>Used to track reviews of Reps created by BMs.</description>
    <label>Sales Team Talent Review</label>
    <nameField>
        <label>Sales Team Talent Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Team Talent  Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>