force-app/main/default/objects/Sales_Team_Talent_review__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>This field takes the value from the country field on the primary sales rep</description>
    <formula>TEXT( Primary_Sales_Rep__r.Country__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>