force-app/main/default/objects/Sales_Team_Talent_review__c/fields/Primary_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Sales Rep Name</label>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipName>Sales_Rep_Performance_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>