force-app/main/default/objects/Sales_Team_Talent_review__c/fields/Review_Summary__c.field-meta.xml
<CustomField>
    <fullName>Review_Summary__c</fullName>
    <label>Review Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>