force-app/main/default/objects/Sales_Team_Talent_review__c/listViews/All_last_year.listView-meta.xml
<ListView>
    <fullName>All_last_year</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_YEAR</value>
    </filters>
    <label>All - last year</label>
    <language>en_US</language>
</ListView>